update module-info.java and build.gradle
Former-commit-id: 8567e44c3edc84d6d525ade6565967102fc3ba18